@@ -29,7 +29,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
     implementation 'com.oracle.database.jdbc:ojdbc10:19.21.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.0'
+    implementation 'org.springframework:spring-jdbc:6.1.1'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
