@@ -1,10 +1,10 @@
 # MASTER script to submit files to AGR (the Alliance)
 
 export MOD_NAME=RGD
-export AGR_SCHEMA=1.0.1.8
+export AGR_SCHEMA=1.0.2.4
 export UPLOAD_NR=1
 export BATCH="${MOD_NAME}_${AGR_SCHEMA}_${UPLOAD_NR}"
-export AGR_RELEASE="5.4.0"
+export AGR_RELEASE="7.0.0"
 
 export WORK_DIR=/home/rgddata/pipelines/AgrPipeline
 cd $WORK_DIR
