@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="main" class="edu.mcw.rgd.pipelines.agr.Main" >
-        <property name="version" value="Alliance Submission Pipeline  -- build Jan 16, 2024" />
+        <property name="version" value="Alliance Submission Pipeline  -- build Jan 17, 2024" />
         <property name="dao" ref="dao"/>
     </bean>
 
