@@ -1,3 +1,6 @@
+Jan 17, 2024
+  updated scripts for regular submission: 7.0.0, schema 1.0.2.4
+
 Jan 16, 2024
   updated dependencies
   
